--- a/module3-functional-iframe-plus.html
+++ b/module3-functional-iframe-plus.html
@@ -20,7 +20,7 @@
 <body>  <div class="wrap wrap-tight">
     <h1>Методические рекомендации</h1>
     <nav class="global-nav" aria-label="Глобальная навигация">
-      <a href="module1-db.html">Модуль 1 — База данных</a>
+      <a href="index.html">Модуль 1 — База данных</a>
            <a href="module2-uiux-iframe.html">Модуль 2 — UI/UX</a>
       <a href="module3-functional-iframe-plus.html">Модуль 3 — Функционал</a>
       <a href="assignment1-guidelines.html">Задание 1</a>
